<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ABTerminal</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="instructions">dumpRAM</string>
    <string name="pair_button">Pair device</string>
    <string name="connect_button">Connect device</string>
    <string name="help_button">Help</string>
    <string name="dummy_content"></string>
    <string name="send">Send</string>
    <!-- 1. step: Pair Device\n2. step: Connect Device\n3. step -->
    <!-- : Enjoy the ride -->
    <string name="title_activity_pair">PairActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pair_list">devices in range</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="connect_list">connectable devices</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_title">How to use</string>
    <string name="help_step1">Pair device you want to connect to.</string>
    <string name="help_step2">After device is successfully paired it will be listed on list of connectable devices.</string> 
    <string name="help_step3">Connect device, receive or transmit data.</string>

</resources>
